// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainFrame /> should display the tooltip 1`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        European Union Population
      </p>
      <p
        class="data-vis-header-2"
      >
        2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          viewBox="0, 0, 100, 100"
          width="1000"
        >
          <g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.922256439254956"
              >
                <title>
                  Austria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.520443301990648"
              >
                <title>
                  Belgium
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.536762499006339"
              >
                <title>
                  Bulgaria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8567531686998793"
              >
                <title>
                  Croatia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.095593156773153"
              >
                <title>
                  Cyprus
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.3388825368642356"
              >
                <title>
                  Czech Republic
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.2246104207905804"
              >
                <title>
                  Denmark
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2019053597015632"
              >
                <title>
                  Estonia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1679810798422485"
              >
                <title>
                  Finland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="16.36065013552099"
              />
              <text>
                France
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="20"
              />
              <text>
                Germany
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.38005549494936"
              >
                <title>
                  Greece
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.1586494256338185"
              >
                <title>
                  Hungary
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.999927549400545"
              >
                <title>
                  Ireland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="14.876119916949053"
              />
              <text>
                Italy
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.3482774138431302"
              >
                <title>
                  Latvia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.5553932671841268"
              >
                <title>
                  Lithuania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0346583415136217"
              >
                <title>
                  Luxembourg
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1"
              >
                <title>
                  Malta
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="4.839024627217867"
              >
                <title>
                  Netherlands
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="9.658594441129104"
              />
              <text>
                Poland
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.2767684050597303"
              >
                <title>
                  Portugal
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="5.428867917676158"
              >
                <title>
                  Romania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1523043825618946"
              >
                <title>
                  Slovakia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.3749871341601394"
              >
                <title>
                  Slovenia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="11.632427523568696"
              />
              <text>
                Spain
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.204233055280633"
              >
                <title>
                  Sweden
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="16.080150433525226"
              />
              <text>
                United Kingdom
              </text>
            </g>
          </g>
        </svg>
        <div
          class="data-vis-tooltip data-vis-tooltip--hover"
        >
          <div>
            <span>
              Austria
            </span>
            <br />
            <span>
              8,770,000
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        Source: https://ec.europa.eu/eurostat/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Copyright: https://ec.europa.eu/info/legal-notice_en
      </p>
    </div>
  </div>
</div>
`;

exports[`<MainFrame /> should display the tooltip 2`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        European Union Population
      </p>
      <p
        class="data-vis-header-2"
      >
        2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          viewBox="0, 0, 100, 100"
          width="1000"
        >
          <g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.922256439254956"
              >
                <title>
                  Austria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.520443301990648"
              >
                <title>
                  Belgium
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.536762499006339"
              >
                <title>
                  Bulgaria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8567531686998793"
              >
                <title>
                  Croatia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.095593156773153"
              >
                <title>
                  Cyprus
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.3388825368642356"
              >
                <title>
                  Czech Republic
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.2246104207905804"
              >
                <title>
                  Denmark
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2019053597015632"
              >
                <title>
                  Estonia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1679810798422485"
              >
                <title>
                  Finland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="16.36065013552099"
              />
              <text>
                France
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="20"
              />
              <text>
                Germany
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.38005549494936"
              >
                <title>
                  Greece
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.1586494256338185"
              >
                <title>
                  Hungary
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.999927549400545"
              >
                <title>
                  Ireland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="14.876119916949053"
              />
              <text>
                Italy
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.3482774138431302"
              >
                <title>
                  Latvia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.5553932671841268"
              >
                <title>
                  Lithuania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0346583415136217"
              >
                <title>
                  Luxembourg
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1"
              >
                <title>
                  Malta
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="4.839024627217867"
              >
                <title>
                  Netherlands
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="9.658594441129104"
              />
              <text>
                Poland
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.2767684050597303"
              >
                <title>
                  Portugal
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="5.428867917676158"
              >
                <title>
                  Romania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1523043825618946"
              >
                <title>
                  Slovakia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.3749871341601394"
              >
                <title>
                  Slovenia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="11.632427523568696"
              />
              <text>
                Spain
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.204233055280633"
              >
                <title>
                  Sweden
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="16.080150433525226"
              />
              <text>
                United Kingdom
              </text>
            </g>
          </g>
        </svg>
        <div
          class="data-vis-tooltip"
        >
          <div>
            <span>
              Austria
            </span>
            <br />
            <span>
              8,770,000
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        Source: https://ec.europa.eu/eurostat/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Copyright: https://ec.europa.eu/info/legal-notice_en
      </p>
    </div>
  </div>
</div>
`;

exports[`<MainFrame /> should render correctly 1`] = `
<div
  className="data-vis-container"
>
  <div
    className="data-vis-header"
  >
    <p
      className="data-vis-header-1"
    >
      European Union Population
    </p>
    <p
      className="data-vis-header-2"
    >
      2017
    </p>
  </div>
  <div
    className="data-vis-body"
  >
    <div
      className="data-vis-chart"
      tabIndex={-1}
    />
  </div>
  <div
    className="data-vis-footer"
  >
    <p
      className="data-vis-footer-1"
    >
      Source: https://ec.europa.eu/eurostat/
    </p>
    <p
      className="data-vis-footer-2"
    >
      Copyright: https://ec.europa.eu/info/legal-notice_en
    </p>
  </div>
</div>
`;

exports[`<MainFrame /> should render correctly 2`] = `""`;

exports[`<MainFrame /> should render the svg element 1`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        European Union Population
      </p>
      <p
        class="data-vis-header-2"
      >
        2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          viewBox="0, 0, 100, 100"
          width="1000"
        >
          <g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.922256439254956"
              >
                <title>
                  Austria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.520443301990648"
              >
                <title>
                  Belgium
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.536762499006339"
              >
                <title>
                  Bulgaria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8567531686998793"
              >
                <title>
                  Croatia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.095593156773153"
              >
                <title>
                  Cyprus
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.3388825368642356"
              >
                <title>
                  Czech Republic
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.2246104207905804"
              >
                <title>
                  Denmark
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2019053597015632"
              >
                <title>
                  Estonia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1679810798422485"
              >
                <title>
                  Finland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="16.36065013552099"
              />
              <text>
                France
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="20"
              />
              <text>
                Germany
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.38005549494936"
              >
                <title>
                  Greece
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.1586494256338185"
              >
                <title>
                  Hungary
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.999927549400545"
              >
                <title>
                  Ireland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="14.876119916949053"
              />
              <text>
                Italy
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.3482774138431302"
              >
                <title>
                  Latvia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.5553932671841268"
              >
                <title>
                  Lithuania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0346583415136217"
              >
                <title>
                  Luxembourg
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1"
              >
                <title>
                  Malta
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="4.839024627217867"
              >
                <title>
                  Netherlands
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="9.658594441129104"
              />
              <text>
                Poland
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.2767684050597303"
              >
                <title>
                  Portugal
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="5.428867917676158"
              >
                <title>
                  Romania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1523043825618946"
              >
                <title>
                  Slovakia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.3749871341601394"
              >
                <title>
                  Slovenia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="11.632427523568696"
              />
              <text>
                Spain
              </text>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.204233055280633"
              >
                <title>
                  Sweden
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="16.080150433525226"
              />
              <text>
                United Kingdom
              </text>
            </g>
          </g>
        </svg>
        <div
          class="data-vis-tooltip"
        >
          <div />
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        Source: https://ec.europa.eu/eurostat/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Copyright: https://ec.europa.eu/info/legal-notice_en
      </p>
    </div>
  </div>
</div>
`;
